feat(core_: implement indempotent identity creation
